data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1653.wast
;; 4. **Test Description**: Introduce a sequence of nested `block` structures where a `br_if` conditionally targets an intermediate block. Validate the proper block is exited and the operand stack matches post-exit expectations.    - **Constraint Checked**: Correct intermediate block exit and operand stack unwinding.    - **Relation to Mismanagement of Block Nesting**: Mismanagement could result in incorrect block exit or stack state.

(assert_invalid
 (module
  (func (result i32)
   (block (result i32)
    (i32.const 0)
    (block (result i32)
     (i32.const 1) 
     (br_if 0 (i32.const 1))
    )
    (i32.const 2)
   )
  )
 )
 "type mismatch"
)